# M4202C-IA

./: MEMO.txt  Pipfile  TODO.txt  pyproject.toml
classification/: classification.ipynb
classification/.ipynb_checkpoints/: classification-checkpoint.ipynb
decision_trees/.ipynb_checkpoints/: trees-checkpoint.ipynb
diabetes/: diabetes.ipynb
diabetes/.ipynb_checkpoints/: diabetes-checkpoint.ipynb
