[tool.poetry]
name = "m4202c - ia"
version = "0.1.0"
description = ""
authors = ["AlexisMoins <moinsalexis@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.0"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
sklearn = "^0.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
